tests/struct_composition_bad_not_first.stderr
tests/struct_composition_bad_not_first.sl:49:50: error: embedded field must be first in struct
