tests/struct_composition_bad_not_first.sl
struct A {
    x int
}

struct B {
    y int
    A
}
